// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanner renders as disabled by default 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
    }
  }
>
  <Component
    captureAudio={false}
    onBarCodeRead={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "height": 80,
          "paddingTop": 30,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "alignSelf": "center",
            "color": "#FFFFFF",
            "marginLeft": 15,
            "textAlign": "center",
          }
        }
      >
        Point your camera at a QR code and tap the scan button
      </Text>
    </Component>
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 10,
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "borderColor": "rgba(255,255,255, 0.1)",
          },
        ]
      }
    />
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "flexDirection": "row",
          "paddingBottom": 20,
          "paddingTop": 50,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flex": 3,
            "justifyContent": "center",
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Icon
            allowFontScaling={false}
            color="#FFFFFF"
            name="x"
            size={40}
          />
        </TouchableOpacity>
      </Component>
      <Component
        style={
          Object {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <TouchableHighlight
          activeOpacity={0.85}
          delayPressOut={100}
          disabled={false}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 50,
                "borderWidth": 3,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              },
              Object {
                "borderColor": "red",
              },
            ]
          }
          underlayColor="black"
        >
          <Component />
        </TouchableHighlight>
      </Component>
      <Component
        style={
          Object {
            "flex": 3,
          }
        }
      />
    </Component>
  </Component>
</SafeAreaView>
`;

exports[`Scanner renders correctly when enabled 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
    }
  }
>
  <Component
    captureAudio={false}
    onBarCodeRead={[Function]}
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "height": 80,
          "paddingTop": 30,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#00ff00"
          hidesWhenStopped={true}
          size="small"
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "alignSelf": "center",
              "color": "#FFFFFF",
              "marginLeft": 15,
              "textAlign": "center",
            }
          }
        >
          Scanning for QR codes
        </Text>
      </Component>
    </Component>
    <Component
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 10,
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "borderColor": "rgba(255,0,0, 0.1)",
          },
        ]
      }
    />
    <Component
      style={
        Object {
          "backgroundColor": "black",
          "flexDirection": "row",
          "paddingBottom": 20,
          "paddingTop": 50,
        }
      }
    >
      <Component
        style={
          Object {
            "alignItems": "center",
            "flex": 3,
            "justifyContent": "center",
          }
        }
      >
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <Icon
            allowFontScaling={false}
            color="#FFFFFF"
            name="x"
            size={40}
          />
        </TouchableOpacity>
      </Component>
      <Component
        style={
          Object {
            "alignItems": "center",
            "flex": 3,
          }
        }
      >
        <TouchableHighlight
          activeOpacity={0.85}
          delayPressOut={100}
          disabled={true}
          onPress={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 50,
                "borderWidth": 3,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              },
              Object {
                "borderColor": "#333333",
              },
            ]
          }
          underlayColor="black"
        >
          <Component />
        </TouchableHighlight>
      </Component>
      <Component
        style={
          Object {
            "flex": 3,
          }
        }
      />
    </Component>
  </Component>
</SafeAreaView>
`;

exports[`Scanner renders error message if not authorized 1`] = `<DisabledScanner />`;
